# rust-chain

./: Cargo.toml  README.md  genesis.json
src/: block.rs  blockchain.rs  main.rs  state.rs  transaction.rs  wallet.rs
src/chain/: block.rs  blockchain.rs  genesis.rs  mempool.rs  mod.rs  state.rs  validator.rs  vote.rs
src/network/: node.rs
src/rpc/: server.rs
src/types/: transaction.rs  wallet.rs
