[package]
name = "rust-chain"
version = "0.1.0"
edition = "2024"


[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.54", features = ["tcp", "mdns", "gossipsub", "noise", "yamux", "tokio", "macros"] }
bincode = "1"
serde_json = "1"
axum = "0.7"